# GZ-Metal-Cell.github.io

./: 404.html  CNAME  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt  robots.txt  rss.xml  search.xml  sitemap.xml
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
about/: __next.$d$sourcePage.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  about.css  about.js  index.html  index.txt
archives/: __next.$d$sourcePage.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
artitalk/: index.html
categories/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.categories.__PAGE__.txt  index.html  index.txt
css/: atom-one-dark.css  calendar.css  chat.css  codeFileTools.css  codeFileTree.css  exhibits.css  hoverOverlay.css  imgGrid.css  index.css  jsTreeList.css  nineSquareGrid.css  page.css  page_cente.css  panorama.css  poem.css  slider.css  subfields.css  timeline.css
galleries/: index.html
gallery/: index.html
js/: AESContainer.js  LeafletMap.js  MathJax.js  TweenMax.min.js  carousel.umd.js  codeFile.js  (+29 more)
posts/AI-Video2Text/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.posts.$c$slug.__PAGE__.txt  index.html  pyproject.toml  run.py
posts/AI-Video2Text/src/video2notes/: __init__.py  __main__.py  cli.py  markdown_gen.py  screenshotter.py  transcriber.py
(+6193 files in other folders)
