[project]
name = "video2notes"
version = "1.0.0"
description = "Extract Chinese subtitles and screenshots from video courses using OpenAI Whisper"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "opencv-python>=4.8.0",
    "imageio-ffmpeg>=0.5.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[project.scripts]
video2notes = "video2notes.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools.packages.find]
where = ["src"]